some controllers and the big buttons

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -17,6 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\StaffRecords\" />
+    <Folder Include="Views\ClientRecords\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
